--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic);
-
 * {
 	margin: 0;
 	padding: 0;
@@ -15,7 +13,7 @@ html, body {
 html { width: 100%; }
 
 body { 
-
+	min-width: 900px;
 }
 
 .top-bar {
@@ -231,21 +229,6 @@ footer a:hover {
 
 /* MOBILE */
 
-@media screen and (max-width: 1000px) {
-
-	.wrapper {
-		width: 95%;
-	}
-
-	.sub-wrapper {
-		padding-top: 5em;
-	}
-
-	footer {
-		font-size: 11pt;
-	}
-	
-}
 
 @media screen and (max-width: 450px) {
 	footer {
